[metadata]
name = pusion
version = 0.1.0
author = Admir Obralija, Yannick Wilhelm
author_email = yannick.wilhelm@gsame.uni-stuttgart.de
description = Pusion (Python Universal Fusion) is a generic and flexible decision fusion framework written in Python for combining multiple classifier’s decision outcomes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IPVS-AS/pusion
project_urls =
    Bug Tracker = https://github.com/IPVS-AS/pusion/issues
    Documentation = https://ipvs-as.github.io/pusion/build/html/index.html
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =     = pusion
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pusion